[package]
name = "my_project6"
version = "0.1.0"
authors = ["funkiben <funkiben@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
my_raft = { path = "../../my_raft" }
serde = { version = "1.0.116", features = ["derive"] }
serde_json = "1.0.59"
nix = "0.18.0"